<resources>
    <string name="app_name">Socialize</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registerWithSocialize">Register With Socialize</string>
    <string name="loginToSocialize">Log In To Socialize</string>
    <string name="alreadyFriends">Friends!</string>
    <string name="postKey">postKey</string>
    <string name="authorUID">authorUID</string>
    <string name="tableName">users</string>
    <string name="onlinePeopleTableName">onlinePeople</string>
    <string name="posts">posts</string>
    <string name="comments">comments</string>
    <string name="friends">friends</string>
    <string name="friendIDs">friendIDs</string>
    <string name="addFriend">Add Friend</string>
    <string name="editPost">Edit</string>
    <string name="deletePost">Delete</string>
    <string name="confirmPostDeleteTitle">Are you sure you want to delete this post?</string>
    <string name="confirmPostDeleteMessage">Deleting the post can\'t be undone!</string>
    <string name="confirmCommentDeleteTitle">Are you sure you want to delete this comment?</string>
    <string name="confirmCommentDeleteMessage">Deleting the comment can\'t be undone!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="cancelEditTitle">Discard changes?</string>
    <string name="cancelEditMessage">Your changes won\'t be saved!</string>
    <string name="postText">postText</string>
    <string name="commentText">commentText</string>
    <string name="noPostFound">This user has no posts yet!</string>
    <string name="yourFriends">Friends</string>
    <string name="createNewPost">Create New Post</string>
    <string name="editPostContent">Edit Post</string>
    <string name="editCommentContent">Edit Comment</string>
    <string name="create">Create</string>
    <string name="findMoreFriends">Find More Friends</string>
    <string name="newPostEditTextHint">Share something beautiful with the world…</string>
    <string name="postUpdatedToastMessage">Post Updated!</string>
    <string name="commentUpdatedToastMessage">Comment Updated!</string>
    <string name="postCreatedToastMessage">Post shared!</string>
    <string name="noFriendsFound">You currently have not added any friends. \n\n Tap the button above to search for friends and add them.</string>
    <string-array name="dropDownListMenu">
        <item>Oldest to Newest</item>
        <item>Newest to Oldest</item>
    </string-array>
    <string name="onlineStatus">online</string>
    <string name="loadingPosts">Loading posts, hang tight!</string>
    <string name="chatZonePackageName">com.example.socializechatzone</string>
    <string name="chatZoneNotFound">Chat Zone not installed on this device!</string>
</resources>